# untitled

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
include/: Application.hpp  ErrorDetailsPane.hpp  ExceptionHandler.hpp  Fonts.hpp  LabeledTextCtrl.hpp  Logger.hpp  MainFrame.hpp  ManagerView.hpp  PQGlobal.hpp  StartupPanel.hpp  UntitledPrecomp.hpp  Utils.hpp
include/Components/: ConnectionStringInput.hpp  DatabaseConnectionWizard.hpp  DatabaseTreeCtrl.hpp  ErrorDetailsMessageDialog.hpp  ErrorDetailsPane.hpp  LabeledTextCtrl.hpp  QuickActionsPanel.hpp  StartupPanel.hpp
include/Interfaces/: ConnectionProviderInteface.hpp
include/Structures/: DatabaseMetadata.hpp  DatabaseTable.hpp
include/Tabs/: TabGrades.hpp  TabMain.hpp  Tabs.hpp
include/Utilities/: ExceptionHandler.hpp  Utils.hpp
include/Views/: DatabaseConnectionDialog.hpp  DatabaseConnectionView.hpp  StartupPanelView.hpp  TableView.hpp
samples/: sample-cache.xml
src/: Application.cpp  ArgParser.cpp  ErrorDetailsPane.cpp  ExceptionHandler.cpp  LabeledTextCtrl.cpp  Main.cpp  MainFrame.cpp  ManagerView.cpp  PQGlobal.cpp  StartupPanel.cpp  Timestamper.cpp  Utils.cpp
src/Components/: ConnectionStringInput.cpp  DatabaseConnectionWizard.cpp  DatabaseTreeCtrl.cpp  ErrorDetailsMessageDialog.cpp  ErrorDetailsPane.cpp  LabeledTextCtrl.cpp  QuickActionsPanel.cpp  StartupPanel.cpp
src/Structures/: DatabaseMetadata.cpp  DatabaseTable.cpp
src/Tabs/: TabGrades.cpp  TabMain.cpp  Tabs.cpp
src/Utilities/: ExceptionHandler.cpp  Utils.cpp
src/Views/: DatabaseConnectionDialog.cpp  StartupPanelView.cpp  (+2 more)
